(rule
  (target db_actions.ml)
  (deps
    (:gen ../../idl/ocaml_backend/gen_api_main.exe)
  )
  (action
    (run %{gen} -filterinternal false -filter nothing -mode db -output
      %{target}))
)

(rule
  (target custom_actions.ml)
  (deps
    (:gen ../../idl/ocaml_backend/gen_api_main.exe)
  )
  (action
    (run %{gen} -filterinternal true -filter closed -mode actions -output
      %{target}))
)

(rule
  (target rbac_static.ml)
  (deps
    (:gen ../../idl/ocaml_backend/gen_api_main.exe)
  )
  (action
    (run %{gen} -filterinternal true -filter closed -mode rbac -output
      %{target}))
)

(library
  (name xapi_internal_context)
  (modules eventgen context xapi_globs)
  (modes best)
  (wrapped false)
  (libraries
    ; external
    threads.posix
    ipaddr
    mtime
    rpclib.core
    fmt
    astring
    sexplib0
    sexplib
    xapi-backtrace
    rpclib.xml

    ; internal
    http_lib
    httpsvr
    xapi-types
    xapi_database
    tracing
    uuid
    clock
    stunnel
    sexpr
    forkexec
    xapi-idl
    xapi_aux
    xapi-stdext-std
    xapi-stdext-date
    xapi-stdext-pervasives
    xapi-datamodel
    xapi-consts
    xapi_version
    xapi-stdext-threads
    xapi-stdext-unix
    xapi-log
  )
)

(library
  (name xapi_internal_minimal)
  (modules (:standard \ eventgen context xapi_globs))
  (modes best)
  (wrapped false)
  (libraries
    ; external
    threads.posix
    rpclib.core
    fmt
    astring
    sexplib0
    sexplib
    xapi-backtrace
    rpclib.xml

    ; internal
    (re_export xapi_internal_context)
    (re_export xapi_db_actions)
    http_lib
    xapi-types
    xapi_database
    uuid
    clock
    stunnel
    sexpr
    forkexec
    xapi-idl
    xapi_aux
    xapi-stdext-encodings
    xapi-stdext-std
    xapi-stdext-date
    xapi-stdext-pervasives
    xapi-datamodel
    xapi-consts
    xapi_version
    xapi-stdext-threads
    xapi-stdext-unix
    xapi-log
  )
)
